REGRESSION(271747@main): [Win] ASSERTION FAILED: canSafelyBeUsed() under WebKit::RemoteImageBufferProxy::streamConnection https://bugs.webkit.org/show_bug.cgi?id=266138

Unreviewed crash fix for Windows port.
After 271747@main, createFlusher() method of ImageBuffer has to be
called on the main thread.

* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:

Canonical link: https://commits.webkit.org/271803@main